# WitchSphere

./: .gitignore  CMakeLists.txt  README.md  readme.txt
Lib/: geom.h
Source/: geom.cpp  main.cpp
